2.91 regression: Changing a node's color wheel, color ramp stops, or curves no longer pushes UNDO to the stack. #83296

Closed
opened 2020-12-01 20:54:22 +01:00 by Anonymous · 15 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NA (AMD Radeon (TM) R9 Fury Series ATI Technologies Inc. 4.5.13587 Core Profile Context 20.2.2 26.20.15019.19000)

Blender Version
Broken: version: Bisecting points to 0688309988
Worked: Before 0688309988

Short description of error
In 2.91, UNDO no longer gets pushed to the stack in the compositor and shader editor when changing a node's color wheel, color ramp stops, or curves.
Before 2.91, this was registered as "unknown action" in the undo history. As of 2.91, it is not registered at all.

Unknown Actions listed in 2.90.1's Undo History.
2.90.1_Unknown_Action.png
They do not appear in 2.91+'s Undo History.

Exact steps for others to reproduce the error

  1. Go into compositor
  2. Add a Node with a color wheel (in my example a color balance)
  3. Modify the colors.
  4. ctrl + z

untitled.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: **NA** (AMD Radeon (TM) R9 Fury Series ATI Technologies Inc. 4.5.13587 Core Profile Context 20.2.2 26.20.15019.19000) **Blender Version** Broken: version: Bisecting points to 0688309988 Worked: Before 0688309988 **Short description of error** In 2.91, UNDO no longer gets pushed to the stack in the compositor and shader editor when changing a node's color wheel, color ramp stops, or curves. Before 2.91, this was registered as "unknown action" in the undo history. As of 2.91, it is not registered at all. `Unknown Action`s listed in 2.90.1's Undo History. ![2.90.1_Unknown_Action.png](https://archive.blender.org/developer/F9421412/2.90.1_Unknown_Action.png) They do not appear in 2.91+'s Undo History. **Exact steps for others to reproduce the error** 1) Go into compositor 2) Add a Node with a color wheel (in my example a color balance) 3) Modify the colors. 4) ctrl + z [untitled.blend](https://archive.blender.org/developer/F9421133/untitled.blend)
Author

Added subscriber: @Xiarno

Added subscriber: @Xiarno

Added subscriber: @Lumpengnom-3

Added subscriber: @Lumpengnom-3

The same is true in compositor and shading editor for changing the color in an rgb node, when moving color stops in color ramp nodes and changing curves in RGB curves and Vector curve nodes.
I think it is pretty much every value that is not a just a number.

The same is true in compositor and shading editor for changing the color in an rgb node, when moving color stops in color ramp nodes and changing curves in RGB curves and Vector curve nodes. I think it is pretty much every value that is not a just a number.
Member

Added subscriber: @EAW

Added subscriber: @EAW
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm the issue is in 2.91.0 and 2.92 master, but not in 2.90.1. I tested the compositor using the color balance node, and the shader editor using the RGB node.


Unknown Actions listed in 2.90.1's Undo History.
2.90.1_Unknown_Action.png
They do not appear in 2.91+'s Undo History.

Setting to high as it is a recent regression.


I tested 2.92 master hash 1176591574, 2.91.0 release hash 0f45cab862b8, and 2.90.1 release.

OS: Windows-10-10.0.19041.630-SP0 64 Bits
GPU: GeForce GTX 470/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35
CPU: i7-950 @3.07 GHz SSE2 SSE3 SSE41
RAM: 8.00 GB

I can confirm the issue is in 2.91.0 and 2.92 master, but not in 2.90.1. I tested the compositor using the color balance node, and the shader editor using the RGB node. ``` ``` `Unknown Action`s listed in 2.90.1's Undo History. ![2.90.1_Unknown_Action.png](https://archive.blender.org/developer/F9421412/2.90.1_Unknown_Action.png) They do not appear in 2.91+'s Undo History. Setting to high as it is a recent regression. --- I tested 2.92 master hash 1176591574, 2.91.0 release hash `0f45cab862b8`, and 2.90.1 release. OS: Windows-10-10.0.19041.630-SP0 64 Bits GPU: GeForce GTX 470/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35 CPU: i7-950 @3.07 GHz SSE2 SSE3 SSE41 RAM: 8.00 GB
Member

Bisecting...
Triaging note: once a fix is found, this would be a probable candidate IMO for #83216 (Potential candidates for corrective releases).

Bisecting... Triaging note: once a fix is found, this would be a probable candidate IMO for #83216 (Potential candidates for corrective releases).
Evan Wilson changed title from Compositor undo problem in 2.91 to 2.91 regression: Color Wheel changes no longer push Undo in node editors. 2020-12-01 22:36:44 +01:00
Member

In #83296#1066363, @Lumpengnom-3 wrote:
The same is true in compositor and shading editor for changing the color in an rgb node, when moving color stops in color ramp nodes and changing curves in RGB curves and Vector curve nodes.
I think it is pretty much every value that is not a just a number.

I misread your comment the first time @Lumpengnom-3, I'll re-update the title and report description after bisecting.

> In #83296#1066363, @Lumpengnom-3 wrote: > The same is true in compositor and shading editor for changing the color in an rgb node, when moving color stops in color ramp nodes and changing curves in RGB curves and Vector curve nodes. > I think it is pretty much every value that is not a just a number. I misread your comment the first time @Lumpengnom-3, I'll re-update the title and report description after bisecting.
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

@ideasman42, bisecting points to 0688309988.

@ideasman42, bisecting points to 0688309988.
Evan Wilson changed title from 2.91 regression: Color Wheel changes no longer push Undo in node editors. to 2.91 regression: Changing a node's color wheel, color ramp stops, or curves no longer pushes UNDO to the stack. 2020-12-02 02:42:25 +01:00

Added subscriber: @rlneumiller

Added subscriber: @rlneumiller

Created D9759 as a fix for this.

Created [D9759](https://archive.blender.org/developer/D9759) as a fix for this.

This issue was referenced by 5baac00bce

This issue was referenced by 5baac00bce74995d48e6aea9289b12413c7774bb

This issue was referenced by 3d0b65f89b

This issue was referenced by 3d0b65f89b2ddad5141acb00685885a995fdc9f3

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2020-12-07 04:21:18 +01:00
Thomas Dinges added this to the 2.91 milestone 2023-02-08 16:20:07 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83296
No description provided.